# athena

./: .gitignore  .gitmodules  .travis.yml  Athena.icns  Athena.pri  Athena.pro  AthenaConfig.cmake.in  AthenaConfigVersion.cmake.in  AthenaCore.pri  AthenaSakura.pri  AthenaWiiSave.pri  AthenaZelda.pri  CMakeLists.txt  Doxyfile  LICENSE  PKGBUILD  PKGBUILD.in  README  README.md  _a_l_t_t_p_enums_8hpp_source.html  _a_l_t_t_p_file_8hpp_source.html  _a_l_t_t_p_file_reader_8hpp_source.html  _a_l_t_t_p_file_writer_8hpp_source.html  _a_l_t_t_p_quest_8hpp_source.html  _a_l_t_t_p_structs_8hpp_source.html  _checksums_8hpp_source.html  _compression_8hpp_source.html  _d_n_a_8hpp_source.html  _d_n_a_yaml_8hpp_source.html  _dir_8hpp_source.html  _file_info_8hpp_source.html  _file_reader_8hpp_source.html  _file_writer_8hpp_source.html  _global_8hpp_source.html  _i_stream_8hpp_source.html  _i_stream_reader_8hpp_source.html  _i_stream_writer_8hpp_source.html  _m_c_file_8hpp_source.html  _m_c_file_reader_8hpp_source.html  _m_c_file_writer_8hpp_source.html  (+870 more)
.github/workflows/: build.yml  test.yml
Example/: CMakeLists.txt  main.cpp
atdna/: CMakeLists.txt  FindLLVM.cmake  PKGBUILD  README.md  atdna.pro  atdnaConfig.cmake.in  atdnaConfigVersion.cmake.in  atdnaHelpers.cmake  main.cpp  main.rc.in  test.cpp  test.hpp
cmake/: FindDiaSDK.cmake  SwitchTools_nx.cmake
docs/: _a_l_t_t_p_enums_8hpp_source.html  _a_l_t_t_p_file_8hpp_source.html  _a_l_t_t_p_file_reader_8hpp_source.html  _a_l_t_t_p_file_writer_8hpp_source.html  _a_l_t_t_p_quest_8hpp_source.html  _a_l_t_t_p_structs_8hpp_source.html  _checksums_8hpp_source.html  _compression_8hpp_source.html  _dir_8hpp_source.html  _exception_8hpp_source.html  _file_info_8hpp_source.html  _file_not_found_exception_8hpp_source.html  _file_reader_8hpp_source.html  _file_writer_8hpp_source.html  _global_8hpp_source.html  _i_o_exception_8hpp_source.html  _i_stream_8hpp_source.html  _i_stream_reader_8hpp_source.html  _i_stream_writer_8hpp_source.html  _invalid_data_exception_8hpp_source.html  _invalid_operation_exception_8hpp_source.html  _m_c_file_8hpp_source.html  _m_c_file_reader_8hpp_source.html  _m_c_file_writer_8hpp_source.html  _m_c_slot_8hpp_source.html  _memory_reader_8hpp_source.html  _memory_writer_8hpp_source.html  _not_implemented_exception_8hpp_source.html  _p_h_y_s_f_s_file_reader_8hpp_source.html  _skyward_sword_file_8hpp_source.html  _skyward_sword_file_reader_8hpp_source.html  _skyward_sword_file_writer_8hpp_source.html  _skyward_sword_quest_8hpp_source.html  _sprite_8hpp_source.html  _sprite_file_8hpp_source.html  _sprite_file_reader_8hpp_source.html  _sprite_file_writer_8hpp_source.html  _sprite_frame_8hpp_source.html  _sprite_part_8hpp_source.html  _types_8hpp_source.html  (+456 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+35 more)
include/: ALTTPEnums.hpp  ALTTPFile.hpp  ALTTPFileReader.hpp  ALTTPFileWriter.hpp  ALTTPQuest.hpp  ALTTPStructs.hpp  BinaryReader.hpp  BinaryWriter.hpp  Checksums.hpp  Compression.hpp  Exception.hpp  FileNotFoundException.hpp  IOException.hpp  InvalidDataException.hpp  InvalidOperationException.hpp  MCFile.hpp  MCFileReader.hpp  MCFileWriter.hpp  Mainpage.hpp  SSFile.hpp  SSFileReader.hpp  SSFileWriter.hpp  SSQuest.hpp  SkywardSwordFile.hpp  SkywardSwordFileReader.hpp  SkywardSwordFileWriter.hpp  SkywardSwordQuest.hpp  Sprite.hpp  SpriteFile.hpp  SpriteFileReader.hpp  SpriteFileWriter.hpp  SpriteFrame.hpp  SpritePart.hpp  Stream.hpp  TextStream.hpp  Types.hpp  WiiBanner.hpp  WiiFile.hpp  WiiImage.hpp  WiiSave.h  (+24 more)
include/Athena/: ALTTPEnums.hpp  ALTTPFile.hpp  ALTTPFileReader.hpp  ALTTPFileReader.hpp.autosave  ALTTPFileWriter.hpp  ALTTPFileWriter.hpp.autosave  ALTTPQuest.hpp  ALTTPQuest.hpp.autosave  ALTTPStructs.hpp  ALTTPStructs.hpp.autosave  BinaryReader.hpp  BinaryReader.hpp.autosave  BinaryWriter.hpp  Checksums.hpp  Compression.hpp  DNA.hpp  DNAYaml.hpp  Dir.hpp  Exception.hpp  FileInfo.hpp  FileNotFoundException.hpp  FileReader.hpp  FileWriter.hpp  Global.hpp  IOException.hpp  IPAddress.hpp  IStream.hpp  IStreamReader.hpp  IStreamWriter.hpp  InvalidDataException.hpp  InvalidOperationException.hpp  MCFile.hpp  MCFileReader.hpp  MCFileWriter.hpp  MCSlot.hpp  MemoryReader.hpp  MemoryWriter.hpp  NotImplementedException.hpp  OAuth.hpp  PHYSFSFileReader.hpp  (+24 more)
include/LZ77/: LZBase.hpp  LZLookupTable.hpp  LZType10.hpp  LZType11.hpp
include/athena/: ALTTPEnums.hpp  ALTTPFile.hpp  ALTTPFileReader.hpp  (+52 more)
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  (+37 more)
src/: ALTTPFile.cpp  ALTTPFileReader.cpp  ALTTPFileWriter.cpp  ALTTPQuest.cpp  ALTTPStructs.cpp  BinaryReader.cpp  BinaryWriter.cpp  Checksums.cpp  Compression.cpp  MCFile.cpp  MCFileReader.cpp  MCFileWriter.cpp  SSFile.cpp  SSFileReader.cpp  SSFileWriter.cpp  SSQuest.cpp  SkywardSwordFile.cpp  SkywardSwordFileReader.cpp  SkywardSwordFileWriter.cpp  SkywardSwordQuest.cpp  Sprite.cpp  SpriteFile.cpp  SpriteFileReader.cpp  SpriteFileWriter.cpp  SpriteFrame.cpp  SpritePart.cpp  Stream.cpp  TextStream.cpp  WiiBanner.cpp  WiiFile.cpp  WiiImage.cpp  WiiSave.cpp  WiiSaveReader.cpp  WiiSaveWriter.cpp  ZQuest.cpp  ZQuestFile.cpp  ZQuestFileReader.cpp  ZQuestFileWriter.cpp  aes.c  aes.cpp  (+11 more)
(+104 files in other folders)
